temps.css
:root {
  --temps-red: #f83e31;
  --temps-blue: #07c1ce;
  --temps-mint: #d3fbee;
}

a {
    text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.8);
}

a:link {
    color: var(--temps-blue);
}

a:visited {
    color: var(--temps-blue);
}

a:hover {
    color: var(--temps-red);
}

a:active {
    color: var(--temps-blue);
}

body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    overflow: hidden;
    font-family: sans-serif;
}

.landing {
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: var(--temps-red);
    z-index: 100;
}

.landing.fade-out {
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.4s ease-out;
}

.landing-logo {
    opacity: 0;

    background-image: url('Images/Logo/temps.png');
    background-size: contain;
    background-repeat:no-repeat;
    background-position:center;
    
    width: 50%; 
    height: 50%;
    
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    
    z-index: 100;
}

.copyright-text {
    position: absolute;
    bottom: 1%;
    left: .75%;


    color: var(--temps-mint);

    font-family: Helvetica, Arial, sans-serif;
    text-align: center;
    font-weight: bold;
    font-size: 1rem;
}

.landing-popup {
    opacity: 0;

    position: absolute;
    top: 5%;
    left: 50%;

    transform: translateX(-50%);

    color: var(--temps-mint);

    font-family: Helvetica, Arial, sans-serif;
    text-align: center;
    font-weight: bold;
    font-size: 2rem;
}

.fade-in {
    opacity: 1;
    transition: opacity 0.5s ease-in;
}

#unit-button {

    --mouse-x: 50%;
    --mouse-y: 50%;
    
    position: absolute; 

    top: 2%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 100;
    
    padding: 10px 20px;
    min-width: 60px;
    
    /* gradient for transition purposes */
    background: radial-gradient(circle at 50% 50%, #b5b5b5 0%, #b5b5b5 100%);
    filter: drop-shadow(0px 0px 4px rgba(45,45,45,0.25));
    color: #2d2d2d;
    border: 0 solid transparent;
    border-radius: 100px;
    font-size: 1.2rem;

    width: 5%;
    height: 5%;
    
    font-family: Arial, sans-serif;
    font-weight: bold;

    transition: all .2s ease-in-out;
}

#unit-button:hover {
    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(197, 197, 197, 1) 0%, rgba(45, 45, 45, 1) 200%);
    transform: translateX(-50%) scale(1.05);
    filter: drop-shadow(0px 0px 16px rgba(45,45,45,0.4));
    cursor: pointer;
}

#unit-button:active {
    transform: translateX(-50%) scale(.92);
}

#unit-button::after {
    content: "°C";
}

#unit-button:hover::after {
    content: "°F";
}

#unit-button[data-unit="F"]::after {
    content: "°F";
}

#unit-button[data-unit="F"]:hover::after {
    content: "°C";
}

.center-piece {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 10;
}

.strip-base, .circle-base, .strip-fill, .circle-fill {
    position: absolute;
    top: 50%;
    left: 50%;
}

.strip-base {
    width: calc(20px + 0.8rem);
    height: 150vh;
    background-color: #000;
    transform: translate(-50%, -50%) rotate(17deg); 
}

.circle-base {
    width: calc(18vmin + 0.8rem);
    height: calc(18vmin + 0.8rem);
    background-color: #000000;
    border-radius: 50%;
    transform: translate(-50%, -50%);
}

.strip-fill {
    width: 20px;
    height: 150vh;
    background-color: #f1f1f1;
    transform: translate(-50%, -50%) rotate(17deg);
}

.circle-fill {
    width: 18vmin;
    height: 18vmin;
    background-color: #f1f1f1;
    border-radius: 50%;
    transform: translate(-50%, -50%);
}

.vs-text {
    position: absolute;

    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 8vmin;

    color: #0d0d0d;
    transform: translate(-50%, -58%);

    pointer-events: none;
}

.split-container {
    position: relative;
    width: 100vw;
    height: 100vh;
    background-color: #000;
}

.split-side {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
}

.split-right {
    background-image: url('https://placehold.co/1920x1080?text=?');
    background-position: right center;
}

.split-left {
    background-image: url('https://placehold.co/1920x1080?text=?');
    background-position: left center;

    clip-path: polygon(
        0 0, 
        calc(50% + 15.24vh) 0, 
        calc(50% - 15.24vh) 100%, 
        0 100%
    );
}

.copyright-right, .copyright-left {
    position: absolute;

    width: max-content; 
    max-width: 25vw;
    height: auto; 
    z-index: 20;

    padding: 0.8rem 1rem; 
    
    background-color: rgba(21, 21, 21, 0.5);
}

.copyright-right {
    right: 0%;
    top: 5%;
}

.copyright-left {
    left: 0%;
    bottom: 5%;
}

.image-copyright {
    font-size: 0.75vw;
    color: #f1f1f1;
    font-family: Helvetica, Arial, sans-serif;
    line-height: 1.5;
    z-index: 100;
}

.left-half, .right-half {
    position: absolute;
    height: 75%;
    width: 50%;
    bottom: 0;

    color: #f1f1f1;
    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.9);

    font-family: Helvetica, Arial, sans-serif;
    font-weight: bold;
}

.right-half {
    left: 50%;
}

.left-half h2, .right-half h2 {
    position: relative;
    left: 50%;

    transform: translateX(-50%); 
    
    text-align: center; 
    text-wrap: balance;
    width: 80%;

    font-size: clamp(2rem, 3.5vw, 4rem);
}

.left-half h3, .right-half h3 {
    position: relative;
    left: 50%;

    margin-top: -3%;
    transform: translateX(-50%); 
    
    text-align: center;
    width: 100%;

    font-size: clamp(1rem, 3.5vw, 2.5rem);
}

.left-half h1, .right-half h1 {
    position: relative;
    left: 50%;

    margin-top: -1%;
    transform: translateX(-50%); 
    
    text-align: center;
    width: 100%;

    font-size: clamp(3rem, 5vw, 8rem);
}

#higher-button, #lower-button {

    --mouse-x: 50%;
    --mouse-y: 50%;
    
    display: flex;
    justify-content: space-between;
    align-items: center;

    position: relative;
    left: 50%;

    transform: translateX(-50%); 
    
    margin-bottom: 5%;
    
    height: 10%;
    width: 40%;

    border: .2rem solid transparent;
    border-radius: 0.4rem;

    font-size: clamp(1rem, 2vw, 3.5rem);
    text-align: left;

    padding-left: 2%;
    padding-right: 2%;
    
    color: #f1f1f1 !important;
    text-shadow: 1px 2px 8px rgba(0,0,0,0.5);
    transition: all 0.225s ease-in-out;
}

#higher-button {
    margin-bottom: 1%;
    background: linear-gradient(90deg,rgba(224, 51, 43, 1) 0%, rgba(248, 62, 49, 1) 100%);
}

#lower-button {
    margin-bottom: 5%;
    background: linear-gradient(90deg,rgba(0, 184, 190, 1) 0%, rgba(7, 193, 206, 1) 100%);
}

#higher-button:hover:not([disabled]), #lower-button:hover:not([disabled]) {
    filter: drop-shadow(8px 10px 6px rgba(0,0,0,0.15));
    cursor: pointer;
    transform: translateX(-50%) scale(1.02);
}

#higher-button:hover:not([disabled]) {
    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(255, 100, 80, 1) 0%, rgba(224, 51, 43, 1) 80%);
    border: .2rem solid #dc3128;
}

#lower-button:hover:not([disabled]) {
    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(42, 230, 240, 1) 0%, rgba(0, 184, 190, 1) 80%);
    border: .2rem solid #00b8be;
}

#higher-button:active:not([disabled]), #lower-button:active:not([disabled]) {
    cursor: pointer;
    filter: drop-shadow(8px 10px 6px rgba(0,0,0,0));
    transform: translateX(-50%) scale(.98);
}

#higher-button:disabled, #lower-button:disabled {
    filter: saturate(50%) opacity(65%);
    cursor: not-allowed;
}

#higher-button:active:not([disabled]) {
    background: linear-gradient(90deg,rgba(224, 51, 43, 1) 0%, rgba(248, 62, 49, 1) 100%);
}

#lower-button:active:not([disabled]) {
    background: linear-gradient(90deg,rgba(0, 184, 190, 1) 0%, rgba(7, 193, 206, 1) 100%);
}

.btn-icon {
    height: 80%;
    width: auto;
    filter: drop-shadow(1px 2px 8px rgba(0,0,0,0.5));
}

.time-block {
    position: absolute;
    bottom: 0%;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    text-align: center;
}

.local-time {
    width: 100%;
    font-size: clamp(1rem, 2.5vw, 2rem);
}

.time-block h2 {
    position: static;
    transform: none;
    margin-top: 0;
    width: 100%;
}

